--- a/package.json
+++ b/package.json
@@ -8,8 +8,18 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "classnames": "^2.2.6",
+    "dotenv": "^8.2.0",
     "next": "10.0.9",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-number-format": "^4.5.1",
+    "recharts": "^2.0.9",
+    "sass": "^1.32.8"
+  },
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-plugin-react": "^7.23.1"
   }
 }
